# audio

./: README.md  Screen Recording (25-02-2026 11-24-35).wmv  audio.py  live record_playback with monitoring.py  live record_playback with waterfall.py  morse_get.py  morse_get_OOK.py  morse_get_OOK_dev.py  morse_get_OOK_dev1.py  morse_get_OOK_dev2.py  morse_get_OOK_test.py  morse_get_correl.py  pyproject.toml
dev/: PyMorse_OOK_speed_test.py  audio.py  loopback_test.py  speeds.py
old/: morse_get_OOK.py
old versions/: loopback_test.py  morse_get.py  morse_get_basic.py
pymorse/: Dictionary.py  PyMorse_OOK.py  PyMorse_OOK_table_attempt.py
