[project]
name = "PyMorseLive"
version = "0.4.0"
license = "GPL-3.0-or-later"

authors = [
  { name="G1OJS", email="g1ojs@yahoo.com" },
]
description = "Simple multi-channel timing-based morse decoder written in Python."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.24.0",
    "matplotlib",
    "pyaudio"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent"
]

keywords = ["ham radio", "radio", "CW", "MORSE", "DECODER"]

[project.urls]
Homepage = "https://github.com/G1OJS/PyMorseLive"
Issues = "https://github.com/G1OJS/PyMorseLive/issues"

[tool.setuptools]
packages = ["pymorse"]
license-files = ["LICENSE"]

[project.scripts]
pymorse = "pymorse.PyMorse_OOK:cli"
